sfa-web-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sfa-web-frontend
  namespace: sfa-web-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sfa-web-frontend
  template:
    metadata:
      labels:
        app: sfa-web-frontend
    spec:
      containers:
      - name: sfa-web-frontend
        image: 10.10.10.202/pico/sfa-web-frontend:v1
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: harbor-registry-secret
