sfa-web-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfa-web-frontend
  namespace: sfa-web-frontend
spec:
  selector:
    app: sfa-web-frontend
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
