sfa-web-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sfa-web-frontend-ingress
  namespace: sfa-web-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: pico.akijventure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sfa-web-frontend
            port:
              number: 80
